登录、页面部分需求优化

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- 用来防止别人在框架里调用你的页面 -->
   <meta http-equiv="Window-target" content="_top">
   <title>图像转发中间件管理</title>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_2431396_s48d4bl43u.css">
   <script type="text/javascript" src="/static/config.js"></script>
 </head>
 
