--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <!-- 用来防止别人在框架里调用你的页面 -->
   <meta http-equiv="Window-target" content="_top">
   <title>无极云转发管理</title>
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_2431396_s48d4bl43u.css">
-  <script type="text/javascript" src="/static/config.js"></script>
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.options.node_mode%>/static/iconfont/kayi-imageGateway/iconfont.css">
+  <script type="text/javascript" src="<%=htmlWebpackPlugin.options.node_mode%>/static/config.js"></script>
 </head>
 
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="/static/js/browser.js"></script>
-  <script type="text/javascript" src="/static/js/dll/vendor.dll.js"></script>
+  <script type="text/javascript" src="<%=htmlWebpackPlugin.options.node_mode%>/static/js/browser.js"></script>
+  <script type="text/javascript" src="<%=htmlWebpackPlugin.options.node_mode%>/static/js/dll/vendor.dll.js"></script>
 </body>
 
 </html>
